# auto-tasks

./: .gitignore  README.md
.github/workflows/: telegram-sign.yaml  v2ex-sign.yaml  v2ex_sign.yaml
telegram-sign/: main.py  requirements.txt
v2ex-sign/: main.py  requirements.txt
v2ex_sign/: Cargo.toml
v2ex_sign/src/: main.rs
